02-docker-setup/terraform/security_groups.tf
resource "aws_security_group" "web_sg" {

 name = "web-sq"
 description = "Allow ssh http https"
 vpc_id = data.aws_vpc.default.id

 ingress {
   from_port = 22
   to_port = 22
   protocol = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
 } 

 ingress {
   from_port = 80
   to_port = 80
   protocol = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
 } 

 ingress {
   from_port = 443
   to_port = 443
   protocol = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
 } 

 egress {
   from_port = 0
   to_port = 0
   protocol = "-1"
   cidr_blocks = ["0.0.0.0/0"]
 }

 tags = {
   name = "web-sg"
   Environment = "dev"
 }
  
}
